--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "php": ">=5.3.3",
     "ext-sockets": "*",
     "ext-mbstring": "*",
-    "ext-gmp": "*",
-    "php-smpp/php-smpp": "^1.2"
+    "ext-gmp": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.1.4"
